--- a/arch/arm64/configs/RMX1801_defconfig
+++ b/arch/arm64/configs/RMX1801_defconfig
@@ -783,3 +783,6 @@ CONFIG_DEFAULT_IOSCHED="zen"
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_DEFAULT_CUBIC=y
+CONFIG_DEFAULT_TCP_CONG="cubic"
