--- a/arch/arm64/configs/RMX1801_defconfig
+++ b/arch/arm64/configs/RMX1801_defconfig
@@ -786,3 +786,4 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_DEFAULT_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_SOUND_CONTROL=y
